--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Decathlon Rent</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
@@ -14,6 +14,8 @@
 		href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
 		rel="stylesheet">
 	<script defer src='/build/bundle.js'></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDuztV5-2fNSoxz14_YdmcX4F4v0O2jmo&libraries=places" async defer></script>
+
 </head>
 
 <body></body>
